# concordium-rwa

./: .env.yarn  .gitignore  Cargo.toml  README.md  package.json
contracts/: .gitignore  Cargo.toml  README.md  package.json
contracts-ts-generator/: Cargo.toml
contracts-ts-generator-v2/: Cargo.toml
contracts-ts-generator-v2/src/: any_contract.rs  client_generator.rs  contracts.rs  generator.rs  main.rs  ui_generator.rs
contracts-ts-generator/src/: lib.rs
contracts/compliance/: Cargo.toml  contract.wasm.v1  package.json
contracts/compliance/src/compliance/: agent.rs  burned.rs  can_transfer.rs  error.rs  event.rs  minted.rs  mod.rs  modules.rs  state.rs  transferred.rs  types.rs
contracts/compliance/src/compliance_modules/: mod.rs
contracts/compliance/src/compliance_modules/allowed_nationalities/: can_transfer.rs  mod.rs  types.rs
contracts/identity-registry/: Cargo.toml  contract.wasm.v1  package.json
contracts/identity-registry/src/: agent.rs  event.rs  identities.rs  is_verified.rs  issuers.rs  state.rs  types.rs
contracts/security-nft/: Cargo.toml  contract.wasm.v1  package.json
contracts/security-nft/schema/: rwa_security_nft_schema.json
contracts/security-nft/src/: agent.rs  burn.rs  error.rs  freeze.rs  mint.rs  operator.rs  pause.rs  recovery.rs  transfer.rs
contracts/sponsor/: Cargo.toml  contract.wasm.v1  package.json
contracts/sponsor/src/: supports_permit.rs
contracts/src/: lib.rs
contracts/src/compliance/: agent.rs  burned.rs  can_transfer.rs  error.rs  event.rs  init.rs  minted.rs  mod.rs  state.rs  supports.rs  transferred.rs  types.rs
contracts/src/identity_registry/: agent.rs  error.rs  event.rs  identities.rs  init.rs  is_same.rs  is_verified.rs  issuers.rs  mod.rs  register_identity.rs  state.rs  supports.rs  types.rs
contracts/src/security_nft/: agent.rs  balance_of.rs  burn.rs  error.rs  event.rs  freeze.rs  init.rs  mint.rs  mod.rs  operator.rs  pause.rs  recovery.rs  state.rs  supports.rs  token_metadata.rs  transfer.rs  types.rs
contracts/src/sponsor/: error.rs  init.rs  mod.rs  permit.rs  state.rs  supports_permit.rs
contracts/src/utils/: agent_state.rs  agents_state.rs  cis2_security_state.rs  cis2_state.rs  compliance_client.rs  holders_security_state.rs  holders_state.rs  identity_registry_client.rs  mod.rs  operators_state.rs  tokens_security_state.rs  tokens_state.rs
contracts/src/utils/clients/: compliance_client.rs  contract_client.rs  mod.rs
contracts/utils/: Cargo.toml
contracts/utils/src/: cis2_security_state.rs  cis2_types.rs  common_types.rs  compliance_types.rs  concordium_cis3.rs  holders_security_state.rs  lib.rs
contracts/utils/src/clients/: cis4_client.rs  compliance_client.rs  contract_client.rs  identity_registry_client.rs
frontend/: .env  package.json
frontend/src/: App.tsx  AppState.ts
frontend/src/components/common/: AddAgent.tsx  AttributeValueField.tsx  EntrypointsList.tsx  ErrorDisplay.tsx  SendTransactionButton.tsx
frontend/src/components/contracts/: ConcordiumContract.tsx  Contract.tsx  ContractLayout.tsx  ContractTypeLayout.tsx  ContractTypes.ts  Contracts.tsx  ContractsLayout.tsx  EntrypointsList.tsx  RwaComplianceInitialize.tsx
frontend/src/lib/: Compliance.ts  ComplianceModuleAllowedNationalities.ts  ConcordiumNodeClient.ts  Contract_rwa_security_nft.ts  GenericContract.ts  GenericContractUI.tsx  IdentityRegistryContract.ts  NftContract.ts  RwaComplianceModuleAllowedNationalities.ts  RwaIdentityRegistry.ts  genericParser.ts  rwaCompliance.ts  rwaComplianceModuleAllowedNationalities.ts  rwaComplianceModuleAllowedNationalitiesUi.ts  rwaComplianceUi.ts  rwaIdentityRegistry.ts  rwaIdentityRegistryUi.ts  rwaSecurityNft.ts  rwaSecurityNftUi.ts  rwaSponsor.ts  rwaSponsorUi.ts  ts-types.ts
(+39 files in other folders)
