[workspace]
members = [
    "contracts/utils",
    "contracts/compliance",
    "contracts/security-nft",
    "contracts/identity-registry",
    "contracts/sponsor",
    "contracts-ts-generator"
]
resolver = "2"

[workspace.dependencies]
concordium-std = { version = "8.1.0", default-features = false }
concordium-cis2 = { version = "5.1.0", default-features = false }
hex = { version = "0.4.3" }
concordium-rwa-utils = { path = "./contracts/utils" }
