[package]
name = "real-world-asset-concordium"
version = "0.1.0"
authors = ["Stactrace Solutions <parv@stactrace.com>"]
edition = "2021"
license = "MPL-2.0"

[features]
default = ["std", "wee_alloc"]
std = ["concordium-std/std", "concordium-cis2/std"]
wee_alloc = ["concordium-std/wee_alloc"]

[dependencies]
concordium-std = { workspace = true, default-features = false }
concordium-cis2 = { workspace = true, default-features = false }
hex = "0.4.3"

[dev-dependencies]
# concordium-smart-contract-testing = { version = "3.2.0" }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = "s"
