cargo-features = ["workspace-inheritance"]

[package]
name = "concordium-rwa-sponsor"
version = "0.1.0"
authors = ["Stactrace Solutions <parv@stactrace.com>"]
edition = "2021"
license = "MPL-2.0"

[features]
default = ["std", "wee_alloc"]
std = ["concordium-std/std"]
wee_alloc = ["concordium-std/wee_alloc"]

[dependencies]
concordium-std = { workspace = true, default-features = false }
concordium-rwa-utils = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = "s"
